2-istio-service-mesh/idsvr/envoy-filter.yaml
#
# Enables mTLS by proxy authentication with Istio sidecar identities
#
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: debug-certificate-filter
  namespace: curity
spec:
  workloadSelector:
    labels:
      role: curity-idsvr-runtime
  configPatches:
    
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        portNumber: 8443
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.router"

    patch:
      operation: INSERT_BEFORE
      value:
       name: envoy.filters.http.lua
       typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua"
          inlineCode: |
            function envoy_on_request(request_handle)

              local urldecode = function(url)
                return (url:gsub("%%(%x%x)", function(x)
                  return string.char(tonumber(x, 16))
                  end))
              end
              
              local path = request_handle:headers():get(":path")
              local streamInfo = request_handle:streamInfo()
              if streamInfo ~= nil then
                local downstreamSsl = streamInfo:downstreamSslConnection()
                if downstreamSsl ~= nil then
                  request_handle:logWarn(urldecode(downstreamSsl:urlEncodedPemEncodedPeerCertificate()))
                end
              end
            end
